<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserir_cidades"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:gravity="center_vertical|center_horizontal"/>

    <EditText
        android:id="@+id/campocidade_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Nome"
        android:layout_marginTop="10dp"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/addcidades_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/adicionar_cidade" />

        <Button
            android:id="@+id/cancelar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/cancelar" />
    </RelativeLayout>
</LinearLayout>